--- a/demo/src/main/resources/fr/projet_ap/Renseignement.fxml
+++ b/demo/src/main/resources/fr/projet_ap/Renseignement.fxml
@@ -133,12 +133,12 @@
          </font>
       </Label>
       <Button fx:id="ValiderAF" layoutX="82.0" layoutY="346.0" mnemonicParsing="false" onAction="#ValiderAF" text="Valider les Autres Frais" />
-      <TableView layoutX="10.0" layoutY="379.0" prefHeight="140.0" prefWidth="276.0">
+      <TableView fx:id="AF" layoutX="10.0" layoutY="379.0" prefHeight="140.0" prefWidth="276.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="Date" />
-          <TableColumn prefWidth="75.0" text="Libellé" />
-            <TableColumn prefWidth="75.0" text="Montant" />
-            <TableColumn prefWidth="50.0" text="Suppr." />
+          <TableColumn fx:id="Af_Date" prefWidth="75.0" text="Date" />
+          <TableColumn fx:id="Af_libelle" prefWidth="75.0" text="Libellé" />
+            <TableColumn fx:id="Af_montant" prefWidth="75.0" text="Montant" />
+            <TableColumn fx:id="Af_Validation" prefWidth="50.0" text="Suppr." />
         </columns>
       </TableView>
       <Label alignment="CENTER" layoutX="28.0" layoutY="145.0" prefHeight="17.0" prefWidth="44.0" text="Libellé" wrapText="true">
